# learn_cpp

./: .claudiaideconfig  .gitignore  README.md  learn_cpp.sln  readme.md
Gtest1/: Gtest1.vcxproj  pch.cpp  pch.h  test.cpp
Project1/: BPParaDependency.cpp  BPParaDependency.h  BPParaTransform.cpp  BPParaTransform.h  BPParaVec.cpp  BPParaVec.h  Gnrc.cpp  Gnrc.h  Project1.vcxproj  Project1.vcxproj.filters  Project1API.h  UtilitySet.cpp  UtilitySet.h  geometry_01.cpp  half_edge.cpp  main.cpp  my_gnrc.cpp  my_gnrc.h  my_handle.cpp  my_handle.h  my_md5.cpp  my_md5.h  my_ref_count.cpp  my_ref_count.h  my_template.h  my_vec.cpp  my_vec.h  object_pool.cpp  out.txt  pch.h  test_alg.cpp  test_atomic.cpp  test_class.cpp  test_class_cast.cpp  test_dsa01.cpp  test_factory.cpp  test_file.cpp  test_geo.cpp  test_hash.cpp  (+16 more)
Project2/: CMakeLists.txt  GYDevillersTriangle.h  Project2.vcxproj  Project2.vcxproj.filters  calculateDataTree.cpp  calculateDataTree.h  calculatePolyhedron.cpp  calculatePolyhedron.h  calculateTriangle.cpp  calculateTriangle.h  commonFileReadWrite.cpp  commonFileReadWrite.h  main.cpp  my_cal_geo.cpp  my_cal_geo.h  my_class_fun.cpp  my_class_fun.h  my_file_read_write.cpp  my_file_read_write.h  my_geometry.cpp  my_geometry.h  my_triangle_intersect.cpp  my_triangle_intersect.h  pch.cpp  pch.h  psykronixTypeDefine.h  test_atomic.cpp  test_binfile_debug.cpp  test_boost.cpp  test_cache.cpp  test_calculate0.cpp  test_calculate0.h  test_case_triangle.cpp  test_cast.cpp  test_cgal_1.cpp  test_cgal_2.cpp  test_cgal_3.cpp  test_class.cpp  test_clipper.cpp  test_construct.cpp  (+58 more)
(+240 files in other folders)
